--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^5.5.2",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
