--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "lodash": "^4.17.21",
+    "module-name": "^0.0.1-security",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "react": "^18",
